--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+body {
+   padding: 0;
+   margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#home {
+   background-size: cover;
+   background-attachment: fixed;
+   background-repeat: no-repeat;
+   -moz-background-size: cover;
+   -webkit-background-size: cover;
+   height: 100%;
+   position: "absolute";
+   /* top: "50%";
+   left: "50%";
+   transform: translate('auto', 'auto');
+   width: "100vw"; */
+   text-align: "center";
+   z-index: 1;
+   margin: 'auto auto';
+   -o-background-size: cover;
+   background-image:
+      url("images/thumb2-orange-abstract-lines-4k-artwork-gray-backgrounds-motion-concepts.jpg");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#avatar {
+   width: 250;
+   height: 250;
+   margin-left: 'auto ';
+   margin-right: 'auto ';
+   justify-content: "center";
+   text-align: "center";
+   align-items: "center";
 }
